--- a/riddl/resources/smart-green.css
+++ b/riddl/resources/smart-green.css
@@ -60,11 +60,9 @@ textarea{
     padding-top: 10px;
 }
 select {
-    background: url('down-arrow.png') no-repeat right, -moz-linear-gradient(top, #FBFBFB 0%, #E9E9E9 100%);
-    background: url('down-arrow.png') no-repeat right, -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FBFBFB), color-stop(100%,#E9E9E9));
-   appearance:none;
+    appearance:none;
     -webkit-appearance:none; 
-   -moz-appearance: none;
+    -moz-appearance: menulist-button;
     text-indent: 0.01px;
     text-overflow: '';
     width:100%;
