--- a/riddl/tests/vote.css
+++ b/riddl/tests/vote.css
@@ -1,14 +1,27 @@
 .flex-container {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-content: stretch;
-    align-items: flex-start;
+  padding: 1em;
+  margin: 1em;
+  list-style: none;
+  border: ridge;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+  justify-content: space-around;
 }
-
 .flex-item {
+    margin: 1em;
+    background: tomato;
     order: 0;
-    flex: 0 1 auto;
+    flex: 0 1 10em;
+    align-self: auto;
+    text-align: center;
+}
+.flex-item:nth-child(1) {
+    order: 0;
+    flex: 0 1 100%;
     align-self: auto;
 }
