--- a/ui/css/ui.css
+++ b/ui/css/ui.css
@@ -34,8 +34,9 @@ input { font-family: sans-serif; font-size: 1em; }
 
 
 #areaconfigure                       { height: 7em; }
+#areaconfigure table                 { width: 100%; }
 #areaconfigure td:nth-child(1)       { width: 7em; padding-right: 1em; }
-#areaconfigure td:nth-child(3)       { width: 16em; padding-left: 1em; }
+#areaconfigure td:nth-child(3)       { width: 100%; padding-left: 1em; }
 #areaconfigure input                 {
   width: 100%;
   box-sizing: border-box;
