--- a/ui/css/ui.css
+++ b/ui/css/ui.css
@@ -22,7 +22,7 @@ button {
 input { font-family: sans-serif; font-size: 1em; }
 
 
-#areaorganisation                       { height: 7em; }
+#areaorganisation                       { height: 4em; }
 #areaorganisation input                 {
   width: 100%;
   box-sizing: border-box;
@@ -33,7 +33,7 @@ input { font-family: sans-serif; font-size: 1em; }
 #areaorganisation td:nth-child(3)       { width: 16em; padding-left: 1em; }
 
 
-#areaconfigure                       { height: 7em; }
+#areaconfigure                       { height: 4em; }
 #areaconfigure table                 { width: 100%; }
 #areaconfigure td:nth-child(1)       { width: 7em; padding-right: 1em; }
 #areaconfigure td:nth-child(3)       { width: 100%; padding-left: 1em; }
@@ -46,8 +46,9 @@ input { font-family: sans-serif; font-size: 1em; }
 #areaconfigure button[name=base]     { width: 100%;  }
 #areaconfigure button[name=instance] { width: 100%;  }
 
-#arealogin                       { height: 7em; }
+#arealogin                       { height: 4em; }
 #arealogin td:nth-child(1)       { width: 7em; padding-right: 1em; }
+#arealogin td:nth-child(2)       { width: 20em; }
 #arealogin td:nth-child(3)       { width: 10em; padding-left: 1em; }
 #arealogin form                  { border: 0 none; }
 #arealogin input                 {
