--- a/ui/css/ui.css
+++ b/ui/css/ui.css
@@ -82,9 +82,11 @@ button.highlight { background-color: #cc0000; }
   padding:0;
   width: 100%;
 }
-#dat_tasks button                  { border: 1pt solid buttonshadow; padding: 0; }
-#dat_tasks td:nth-child(1)         { width: 32ex; }
-#dat_tasks td:nth-child(2)         { width: 1em; }
+#dat_tasks button                  { border: 1pt solid buttonshadow; padding: 0.2em 0.4em; border-width: 0.2em; }
+#dat_tasks td:nth-child(1)         { padding: 0.4em 0; }
+#dat_tasks td:nth-child(1)         { min-width: 32ex; white-space: nowrap; padding: 0.4em 0; padding-left: 1em; padding-right: 1em; }
+#dat_tasks td:nth-child(2)         { width: 1em; padding-right: 1em; }
+#dat_tasks td:nth-child(3)         { width: 100%}
 #dat_tasks tr:nth-child(odd)       { background-color: ButtonFace; color: ButtonText; }
 #dat_tasks tr:nth-child(odd) input { background-color: ButtonFace; }
 
@@ -130,3 +132,21 @@ ui-area > form {
   padding: 0;
   padding-left: 1em;
 }
+
+div.task {
+  padding: 1em;
+}
+
+#dat_tasks tr.priority_1:nth-child(even)       { background-color: #dc8add30; color: ButtonText; }
+#dat_tasks tr.priority_1:nth-child(even) input { background-color: #dc8add30; }
+#dat_tasks tr.priority_1:nth-child(odd)        { background-color: #dc8add80; color: ButtonText; }
+#dat_tasks tr.priority_1:nth-child(odd) input  { background-color: #dc8add80; }
+
+#dat_tasks tr.priority_1 td:first-child::before {
+  content: !
+}
+
+#dat_tasks tr.priority_42:nth-child(even)       { background-color: #99c1f130; color: ButtonText; }
+#dat_tasks tr.priority_42:nth-child(even) input { background-color: #99c1f130; }
+#dat_tasks tr.priority_42:nth-child(odd)        { background-color: #99c1f180; color: ButtonText; }
+#dat_tasks tr.priority_42:nth-child(odd) input  { background-color: #99c1f180; }
