--- a/ui/css/ui.css
+++ b/ui/css/ui.css
@@ -113,6 +113,7 @@ button.highlight { background-color: #cc0000; }
 #areatasklist .dat_heading {
   border: 1em solid white;
   border-bottom: 0;
+  white-space: nowrap;
 }
 #areatasklist .dat_heading span {
   font-weight: bold;
@@ -172,7 +173,10 @@ ui-area > form {
   display: block;
 }
 
-.dat_table { margin-left: 1em; margin-top: 1em; }
+.dat_table { margin-left: 1em; margin-top: 1em; margin-right: 1em; }
+.dat_table:last-child { margin-bottom: 1em; }
+.dat_table tr { white-space: nowrap; }
+
 .dat_tasks_priority_high.dat_indent_table { margin-left: 1em }
 
 .dat_indent_table { margin-left: 1.5em; margin-top: 0; }
@@ -234,4 +238,8 @@ ui-resizehandle {
 .extension.clickable:hover {
   color:var(--x-ui-light-text-color);
   text-decoration:underline;
+}
+
+.filler {
+  width: 100%;
 }
